--- a/src/style.css
+++ b/src/style.css
@@ -1,43 +1,202 @@
 body {
   margin: 0;
+  position: relative;
+  font-family: 'ABeeZee', sans-serif;
 }
 
-#app {
-  background: blue;
-  height: 100px;
-  color: white;
-  font-family: 'Press Start 2P', cursive;
-  font-size: 1em;
+#dashboard {
+  position: fixed;
+  bottom: 0;
+  width: 100%;
+  padding: 10px;
+  box-sizing: border-box;
+}
+
+.wrapper {
+  height: 240px;
   padding: 1em;
+  background-color: yellow;
   text-align: center;
+  border-radius: 30px;
+  box-shadow: 0px 6px 0px 3px #f7e919;
+  margin-bottom: 10px;
+}
+
+h1 {
+  font-family: 'Fredoka One', helvetica, sans-serif;
+  font-size: 4em;
+  color: #ffba15;
+  text-align: center;
+  text-shadow: 0px 4px 0px #ae6f6f;
+}
+
+h2 {
+  font-family: 'Fredoka One', helvetica, sans-serif;
+  font-size: 3em;
+  color: #ffba15;
+  text-align: center;
+  text-shadow: 0px 4px 0px #ae6f6f;
+  margin: 0.2em;
+}
+
+h3 {
+  font-family: 'Fredoka One', helvetica, sans-serif;
+  font-size: 1em;
+  color: #ffba15;
+}
+
+
+#gui {
+  position: fixed;
 }
 
 #game-canvas {
 }
 
-a {
-  display: block;
-  line-height: 2em;
+button {
   cursor: pointer;
-  background: rebeccapurple;
+  background: #ffba15;
+  border: none;
+  padding: 0.2em 1.5em;
+  color: white;
+  font-size: 1.3em;
+  border-radius: 2em;
+  box-shadow: 0px 3px #ae6f6f;
+  margin: 0 0.5em;
+  font-family: 'Fredoka One', cursive;
 }
 
-a:hover {
-  color: rebeccapurple;
-  background: yellow;
+button:hover {
+  background: #fdcc0d;
 }
 
-a.disabled {
-  background: gray;
+button:active {
+  background: #f4b00c;
+  box-shadow: inset 0px 3px #fff;
+}
+
+button:focus {
+  outline: none;
+}
+
+button.danger {
+  background: #f00;
+  box-shadow: 0px 3px #b00c0c;
+}
+
+button.danger:hover {
+  background: #ff5454;
+}
+
+button.danger:active {
+  background: #c40000;
+  box-shadow: inset 0px 3px #fff;
+}
+
+button.disabled {
+  background: #ccc;
+  box-shadow: inset 0px 3px #acacac;
+}
+
+button.disabled:hover {
   cursor: default;
+  background: #ccc;
+}
+
+button.danger:active {
+  cursor: default;
+  background: #ccc;
+  box-shadow: inset 0px 3px #acacac;
+}
+
+.gaming {
+  display: flex;
+  height: 200px;
+}
+
+.player {
+  min-width: 360px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+}
+
+.status {
+  flex-grow: 2;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+}
+
+.circle {
+  width: 2em;
+  height: 2em;
+  border-radius: 2em;
+  border: 4px solid white;
+  margin: 0 auto;
+}
+
+.circle_blue {
+  background: #01c4ff;
+}
+
+.circle_red {
+  background: #fa6767;
+}
+
+.header {
+  display: flex;
+  border-bottom: 3px dotted #f9ba17;
+  padding-bottom: 15px;
+}
+
+.left {
+  flex-grow: 1;
+  text-align: left;
 }
 
 input {
-  background: blue;
-  border: none;
-  border-bottom: 1px solid white;
-  font-family: 'Press Start 2P', cursive;
-  color: white;
-  line-height: 3em;
-  font-family: 1.3em;
+  border-radius: 2em;
+  border: 0;
+  padding: 0.2em 0.5em;
+  font-family: 'Fredoka One', cursive;
+  font-size: 1.3em;
+  box-shadow: inset 0 2px 0px #ffba15;
+  color: black;
+  width: 6em;
+  text-align: center;
+}
+
+input:focus {
+  outline: none;
+}
+
+.left-part {
+  border-radius: 2em 0 0 2em;
+  margin-right: 0;
+}
+
+.right-part {
+  border-radius: 0 2em 2em 0;
+  margin-left: 0;
+}
+
+.chat-input {
+  width: 20em;
+  text-align: left;
+}
+
+.chat-msg-wrapper {
+  display: flex;
+  flex-direction: column-reverse;
+}
+
+.chat-msg {
+  border-radius: 1em;
+  border: 1px solid gray;
+  padding: 0.2em 1em;
+  line-height: 2em;
+  background: white;
+  opacity: 0.5;
+  pointer-events: none;
 }
